# python-wireguard

./: .gitignore  Makefile  build.py  example.py  pyproject.toml  test_wireguard.py  wireguard.c  wireguard.py
libwg/: wireguard.h
wireguard/: __init__.py
